<resources>
    <string name="app_name">DeliveryTracing</string>
    <string name="eres_administrador">¿Eres administrador?</string>
    <string name="nombre_empresa">Nombre Empresa</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="c_dula">Cédula</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="login">Login</string>
    <string name="ingreseCodigo">Ingrese su código aquí</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="rastrear">Rastrear</string>
    <string name="title_activity_maps">Map</string>
    <string name="registrar_pedido">Registrar pedido</string>
    <string name="gestionar_usuarios">Gestionar usuarios</string>
    <string name="hola">¡Hola!</string>
    <string name="pedidos_disponibles">Pedidos disponibles</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="nombre_del_cliente">Nombre del cliente</string>
    <string name="direcci_n">Dirección</string>
    <string name="telefono">Telefono</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_gestion">GestionActivity</string>
    <string name="empleados">Empleados</string>
</resources>
