<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yoyo.deliverytracing.LoginActivity"
    >

    <ImageView
        android:id="@+id/loginImg"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:srcCompat="?attr/colorPrimary" />

    <TextView
        android:id="@+id/ingresarText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginImg"
        android:layout_marginTop="15dp"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textSize="30sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutNombre"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/ingresarText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutCedula"
        android:layout_below="@+id/textInputLayoutNombre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp">

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="numberPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/ingresarBoton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registrarmeText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/ingresar" />

    <TextView
        android:id="@+id/registrarmeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/registrarme"
        android:textAlignment="center" />


</RelativeLayout>
